# argocd-lab

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  Taskfile.yml  env.example  mkdocs.yml  test-setup.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-docs.yml  gh-pages.yml
argocd/apps/: airflow-postgresql.yaml  airflow.yaml  app-of-apps.yaml  backend.yaml  demo-api.yaml  postgres.yaml
docs/: deployment.md  index.md  private-repository.md  pyproject.toml  setup.md  tasks.md  troubleshooting.md
k8s/airflow/: Chart.yaml  postgresql-pvc.yaml  postgresql-service.yaml  postgresql.yaml  values.yaml
k8s/argocd/: values.yaml
k8s/backend/: Chart.yaml  values.yaml
k8s/backend/app/: Dockerfile  pyproject.toml
k8s/backend/app/app/: main.py
k8s/backend/templates/: deployment.yaml  service.yaml
k8s/demo-api/: Chart.yaml  values.yaml
k8s/demo-api/app/: Dockerfile  main.py  pyproject.toml  test_main.py
k8s/demo-api/templates/: deployment.yaml
k8s/postgres/: .gitignore  Chart.yaml  values.yaml
scripts/: airflow-secrets.sh  airflow.sh  apps.sh  argocd-deploy.sh  argocd.sh  check-lab-status.sh  demo-app.sh  deploy-app.sh  deploy-tools.sh  docs.sh  env-start.sh  install-macos.sh  lab-start.sh  lab-stop.sh  lab.sh  minikube-start.sh  minikube-stop.sh  minikube.sh  postgres.sh  quality.sh  setup-dependencies.sh  setup.sh  teardown.sh  undeploy-app.sh  utils.sh
scripts/lib/: common.sh
tasks/: README.md  airflow.yml  apps.yml  argocd.yml  docs.yml  lab.yml  postgres.yml  quality.yml  utils.yml
