[project]
name = "argocd-lab-docs"
version = "0.1.0"
description = "Documentation environment for argocd-lab"
# Use a broadly supported Python range for local dev
requires-python = ">=3.10,<3.13"
dependencies = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.12",
]

[tool.uv]
index-url = "https://pypi.org/simple"
