[project]
name = "argocd-lab-backend"
version = "0.1.0"
description = "Simple FastAPI ping service"
readme = "README.md"
requires-python = ">=3.10"

[project.dependencies]
fastapi = "^0.115.2"
uvicorn = { version = "^0.32.0", extras = ["standard"] }

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.uv.sources]
# no additional sources

