[project]
name = "demo-api"
version = "0.1.0"
description = "Demo API for testing Kubernetes deployments"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "httpx>=0.28.1",
]

[tool.setuptools]
py-modules = ["main"]
